--- a/Test/app/src/main/res/values/colors.xml
+++ b/Test/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="grey">#FF424242</color>
     <color name="cherry">#FF8A0829</color>
     <color name="bgBottomNavigation">#F48652</color>
+    <color name="green">#87EF6B</color>
+
 
 </resources>
