--- a/Test/app/src/main/res/layout/activity_feed_item.xml
+++ b/Test/app/src/main/res/layout/activity_feed_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Feed Title"
         android:textSize="18sp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="28dp" />
 
     <ImageView
         android:id="@+id/feed_image"
@@ -31,7 +31,7 @@
             android:id="@+id/icon_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_arrow_circle_up_24" />
+            android:src="@drawable/baseline_arrow_circle_up_dark_24" />
 
         <TextView
             android:id="@+id/upvote_count"
@@ -46,8 +46,8 @@
             android:id="@+id/icon_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:src="@drawable/baseline_arrow_circle_down_24" />
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/baseline_arrow_circle_down_dark_24" />
 
         <TextView
             android:id="@+id/downvote_count"
@@ -56,18 +56,34 @@
             android:text="0"
             android:textSize="16sp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="10dp"/>
 
         <ImageButton
             android:id="@+id/icon_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:src="@drawable/baseline_mode_comment_24"
+            android:src="@drawable/baseline_chat_bubble_dark_24"
             />
 
         <TextView
             android:id="@+id/comment_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="16sp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="20dp"/>
+
+        <ImageButton
+            android:id="@+id/icon_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_share_24"
+            android:layout_marginLeft="7dp"/>
+
+        <TextView
+            android:id="@+id/share_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
