--- a/Test/app/src/main/res/layout/fragment_user_setting.xml
+++ b/Test/app/src/main/res/layout/fragment_user_setting.xml
@@ -29,14 +29,15 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
 
-    <TextView
+    <Button
+        android:id="@+id/status_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Status : Online"
+        android:text="Status: Online"
         android:layout_gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/green"
+        android:textColor="@color/green_dark"
         />
     <View
         android:layout_width="match_parent"
